--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="assets/js/matheHelfer.js"></script>
 </head>
 <body>
+
+    <p><span id="variableA"></span> + <span id="variableA"></span> = <input type="number"></p>
     
 </body>
 </html>
