Changed Project Name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mathe-Helfer</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/matheHelfer.js"></script>
+    <script src="assets/js/mathGame.js"></script>
 </head>
 <body>
 
