--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
-        
+    <p>
+        <script>
+            window.document.write(lessonOutput);
+            </script>
+    </p>
 </body>
 </html>
