Refactored: output now as prompt (easier for a beginner, to be improved)

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 <body>
 
-    <p>
+  <!--  
+    <form>
         <script>
             window.document.write(lessonOutput);
-            </script>
-    </p>
+        </script>
+        <input type="number" value="20" name="lessonInputValue" id="lessonInputValue" required>
+        <input type="submit" OnClick="compareResult()" name="sendResult">
+    </form>
+-->
 </body>
 </html>
