Added refresh button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="assets/js/mathGame.js"></script>
 </head>
 <body>
+        <button value="ReloadPage" onClick="window.location.reload()" class="refresh">Bitte zeige mir eine neue Aufgabe</button>
 
   <!--  
     <form>
