--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 </head>
 
 <body onload="createExercise()">
-    <div id="lessonOutput"></div>
-    <form onsubmit="return false;">
-        <input type="number" value="" name="lessonInputValue" id="lessonInputValue" required>
-        <input type="submit" onclick="checkResult()" name="sendResult">
-    </form>
-    <div id="resultOutput"></div>
-    <button value="ReloadPage" onclick="createExercise()" class="refresh">Bitte zeige mir eine neue Aufgabe</button>
+    <header>
+        <h1>Mathe Spiel</h1>
+    </header>
+    <main>
+        <h2>Übe Plus- und Minusrechnen bis zur Zahl 20</h2>
+        <div id="lessonOutput"></div>
+        <form onsubmit="return false;">
+            <input type="number" value="" name="lessonInputValue" id="lessonInputValue" required>
+            <input type="submit" onclick="checkResult()" name="sendResult">
+        </form>
+        <div id="resultOutput"></div>
+        <button value="ReloadPage" onclick="createExercise()" class="refresh">Bitte zeige mir eine neue Aufgabe</button>
+    </main>
+    <footer>
+        <a href="https://playground.odras.de">Hier findest du noch mehr JavaScript-Spiele von Odras</a>
+    </footer>
     <script src="assets/js/mathGame.js"></script>
 </body>
 
