Changed value of submit button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="lessonOutput"></div>
         <form onsubmit="return false;">
             <input type="number" value="" name="lessonInputValue" id="lessonInputValue" required>
-            <input type="submit" onclick="checkResult()" name="sendResult">
+            <input type="submit" onclick="checkResult()" name="sendResult" value="Ist meine Lösung richtig?">
         </form>
         <div id="resultOutput"></div>
         <button value="ReloadPage" onclick="createExercise()" class="refresh">Bitte zeige mir eine neue Aufgabe</button>
