Clear input field for solution on new exercise

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h2>Übe Plus- und Minusrechnen bis zur Zahl 20</h2>
         <div id="lessonOutput"></div>
-        <form onsubmit="return false;">
+        <form onsubmit="return false;" id="exerciseForm">
             <input type="number" value="" name="lessonInputValue" id="lessonInputValue" required>
             <input type="submit" onclick="checkResult()" name="sendResult" value="Ist meine Lösung richtig?">
         </form>
